manifests/broadcaster-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: broadcaster-dep
spec:
  replicas: 6
  selector:
    matchLabels:
      app: broadcaster

  template:
    metadata:
      labels:
        app: broadcaster

    spec:
      containers:
      - name: broadcaster
        image: broadcaster:local
        imagePullPolicy: IfNotPresent




        ports:
        - containerPort: 3000
