manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-logs
          emptyDir: {}
      containers:
        - name: writer
          image: razibhasan2/log-writer:1.0.0
          volumeMounts:
            - name: shared-logs
              mountPath: /usr/src/app/shared
        - name: reader
          image: razibhasan2/log-reader:1.0.0
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: shared-logs
              mountPath: /usr/src/app/shared
