manifests/log-output-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
spec:
  type: ClusterIP
  selector:
    app: broadcaster
  ports:
  - port: 80
    targetPort: 3000
