manifests/greeter-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: greeter
spec:
  parentRefs:
  - name: greeter-svc
  rules:
  - backendRefs:
    - name: greeter-svc-v1
      port: 80
      weight: 75
    - name: greeter-svc-v2
      port: 80
      weight: 25
